docs: fix v2.2 cookbook validation issues (#595)